opam-version: "2.0"
version: "0.1.0"
maintainer: "Ramil Farkhshatov <ramil.fh@ya.ru>"
authors: ["Ramil Farkhshatov"]
license: "LGPLv3 with OpenSSL linking exception"
build: ["dune" "build" "-j" jobs "-p" name]
synopsis: "Simple incomplete Rocket.Chat client"
depends: ["lwt"
          "lwt_ppx"
          "uri"
          "http-lwt-client"
          "websocket-client" {>= "0.3.0"}
          "yojson"
          "ppx_deriving_yojson"]
